<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@color/backgroundColor">
    <TextView
        android:id="@+id/textView"
        android:layout_width="268dp"
        android:layout_height="53dp"
        android:layout_marginTop="80dp"
        android:text="@string/safe_transfer"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registration_email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/registration_name"
        app:layout_constraintStart_toStartOf="@+id/registration_name"
        app:layout_constraintTop_toBottomOf="@+id/registration_name" />

    <EditText
        android:id="@+id/registration_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:color="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/registration_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registration_email"
        app:layout_constraintTop_toBottomOf="@+id/registration_email" />


    <EditText
        android:id="@+id/registration_confirm_password"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:color="@color/white"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/registration_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/registration_password"
        app:layout_constraintTop_toBottomOf="@+id/registration_password" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/registration_email"
        app:layout_constraintEnd_toStartOf="@+id/registration_email"
        app:layout_constraintTop_toTopOf="@+id/registration_email"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/name_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/registration_name"
        app:layout_constraintEnd_toStartOf="@+id/registration_name"
        app:layout_constraintTop_toTopOf="@+id/registration_name"
        app:srcCompat="@drawable/ic_person" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/registration_password"
        app:layout_constraintEnd_toStartOf="@+id/registration_password"
        app:layout_constraintTop_toTopOf="@+id/registration_password"
        app:srcCompat="@drawable/ic_lock" />

    <ImageView
        android:id="@+id/password_icon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/registration_confirm_password"
        app:layout_constraintEnd_toStartOf="@+id/registration_confirm_password"
        app:layout_constraintTop_toTopOf="@+id/registration_confirm_password"
        app:srcCompat="@drawable/ic_lock" />


    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="@color/accentColor"
        android:text="Create Account"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/registration_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/registration_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/registration_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>